@@ -14,6 +14,8 @@ Version 1.8.3
 - BUG: Issue #554: newline symbol is always
        the same in TortoiseMerge. (Stefan)
 - BUG: Issue #558: Crash in log dialog. (Stefan)
+- BUG: Issue #559: Crash in moved-blocks
+       detection in TortoiseMerge. (Stefan)
 - NEW: Issue #551: Remember the 'ignore ancestry'
        option. (Stefan)
 - NEW: Issue #552: Tri-State checkbox handling
